add jquery and button to send create (method not working)

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,19 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+    script(src='/js/jquery/jquery-3.6.0.min.js')
+    script(src='/js/jquery/jquery-migrate-3.4.0.min.js')
+    script(src='/js/jquery/jquery.form.js')
+    script(src='/js/jquery/notify.js')
+    script(src='/js/lodash.min.js')
+    script(src='/js/jquery/jquery.ubaplayer.js')
+    script(src='/js/jquery/typeahead.bundle.js')
+    script(src='/js/bootstrap-multiselect.js')
+    script(src='/js/jquery/jquery.autocomplete.min.js')
+    script(src='/js/jquery/jquery.blockUI.js')
+    script(src='/js/jquery/jquery-ui-1.13.1.js')
+    script(src='/js/bootstrap-tagsinput.js')
   body
     block content
+    block js
