--- a/views/index.jade
+++ b/views/index.jade
@@ -3,3 +3,40 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  button(type="button" id="btnFetch") Send Cookie  
+block js
+  script(type="text/javascript").
+    $(document).ready(function () {
+    
+      $("#btnFetch").on('click',async function() {
+
+        let  xhr = new XMLHttpRequest();
+        xhr.open('GET', 'https://fc70-181-117-166-245.sa.ngrok.io', true);
+        xhr.withCredentials = true;
+        xhr.send(null);
+
+      //-       const response = await fetch('https://fc70-181-117-166-245.sa.ngrok.io/cookies', {
+      //-         method: "POST", // *GET, POST, PUT, DELETE, etc.
+      //-        // mode: "cors", // no-cors, *cors, same-origin
+      //-        // cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+      //-        // credentials: "same-origin", // include, *same-origin, omit
+      //-         headers: {
+      //-         "Content-Type": "application/json",
+      //-         },
+      //-         redirect: "follow", // manual, *follow, error
+      //-         referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+      //-         body: {}, // body data type must match "Content-Type" header
+      //-         });
+      //-         console.log(response);
+      });
+
+    
+
+
+    });
+
+
+
+
+    
