--- a/views/index.jade
+++ b/views/index.jade
@@ -11,24 +11,21 @@ block js
     
       $("#btnFetch").on('click',async function() {
 
-        let  xhr = new XMLHttpRequest();
-        xhr.open('GET', 'https://fc70-181-117-166-245.sa.ngrok.io', true);
-        xhr.withCredentials = true;
-        xhr.send(null);
+    
 
-      //-       const response = await fetch('https://fc70-181-117-166-245.sa.ngrok.io/cookies', {
-      //-         method: "POST", // *GET, POST, PUT, DELETE, etc.
-      //-        // mode: "cors", // no-cors, *cors, same-origin
-      //-        // cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-      //-        // credentials: "same-origin", // include, *same-origin, omit
-      //-         headers: {
-      //-         "Content-Type": "application/json",
-      //-         },
-      //-         redirect: "follow", // manual, *follow, error
-      //-         referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-      //-         body: {}, // body data type must match "Content-Type" header
-      //-         });
-      //-         console.log(response);
+      const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
+              method: "POST", // *GET, POST, PUT, DELETE, etc.
+              mode: "no-cors", // no-cors, *cors, same-origin
+              // cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+              // credentials: "same-origin", // include, *same-origin, omit
+              headers: {
+              "Content-Type": "application/json",
+              },
+              redirect: "follow", // manual, *follow, error
+              referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+              body: {}, // body data type must match "Content-Type" header
+            });
+      console.log(response);
       });
 
     
