--- a/views/index.jade
+++ b/views/index.jade
@@ -3,32 +3,50 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
-
+  button(type="button" id="btnCreate") Create Cookie 
   button(type="button" id="btnFetch") Send Cookie  
 block js
   script(type="text/javascript").
     $(document).ready(function () {
     
       $("#btnFetch").on('click',async function() {
-
-    
-
-      const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
+      //const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
+         const response = await fetch('https://19f2-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/cookies', { //app2
               method: "POST", // *GET, POST, PUT, DELETE, etc.
-              mode: "no-cors", // no-cors, *cors, same-origin
-              // cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-              // credentials: "same-origin", // include, *same-origin, omit
-              headers: {
-              "Content-Type": "application/json",
-              },
-              redirect: "follow", // manual, *follow, error
-              referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+             // crossDomain:true,
+             // mode: "cors", // no-cors, cors, same-origin
+              //cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+              credentials: "include", // include, *same-origin, omit
+              //- headers: {
+              //- "Content-Type": "application/json",
+              //- },
+             // "sec-fetch-site": "cross-site",
+             // redirect: "follow", // manual, *follow, error
+             // referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
               body: {}, // body data type must match "Content-Type" header
             });
+
+
       console.log(response);
       });
 
-    
+      $("#btnCreate").on('click',async function() {
+      //const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
+         const response = await fetch('https://465f-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/createCookie', { //app2
+              method: "GET", // *GET, POST, PUT, DELETE, etc.
+             // crossDomain:true,
+             // mode: "cors", // no-cors, cors, same-origin
+              //cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
+             // credentials: "include", // include, *same-origin, omit
+              //- headers: {
+              //- "Content-Type": "application/json",
+              //- },
+             // "sec-fetch-site": "cross-site",
+             // redirect: "follow", // manual, *follow, error
+             // referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
+             // body: {}, // body data type must match "Content-Type" header
+            });
+      });
 
 
     });
