--- a/views/index.jade
+++ b/views/index.jade
@@ -10,41 +10,21 @@ block js
     $(document).ready(function () {
     
       $("#btnFetch").on('click',async function() {
-      //const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
-         const response = await fetch('https://19f2-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/cookies', { //app2
-              method: "POST", // *GET, POST, PUT, DELETE, etc.
-             // crossDomain:true,
-             // mode: "cors", // no-cors, cors, same-origin
-              //cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-              credentials: "include", // include, *same-origin, omit
-              //- headers: {
-              //- "Content-Type": "application/json",
-              //- },
-             // "sec-fetch-site": "cross-site",
-             // redirect: "follow", // manual, *follow, error
-             // referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-              body: {}, // body data type must match "Content-Type" header
+        // const response = await fetch('https://8f5b-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/cookies', { //app2
+           const response = await fetch('https://5e66-181-117-166-245.sa.ngrok.io/cookies', { //app2
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({foo: 'bar'}),
+            credentials: 'include'
             });
-
-
-      console.log(response);
+            console.log(response);
       });
 
       $("#btnCreate").on('click',async function() {
-      //const response = await fetch('https://fe4e-2803-9800-909f-80fc-71aa-e3e7-c5c2-33ed.sa.ngrok.io/cookies', {
-         const response = await fetch('https://465f-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/createCookie', { //app2
+         const response = await fetch('https://5e4a-181-117-166-245.sa.ngrok.io/createCookie', { //app1
               method: "GET", // *GET, POST, PUT, DELETE, etc.
-             // crossDomain:true,
-             // mode: "cors", // no-cors, cors, same-origin
-              //cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-             // credentials: "include", // include, *same-origin, omit
-              //- headers: {
-              //- "Content-Type": "application/json",
-              //- },
-             // "sec-fetch-site": "cross-site",
-             // redirect: "follow", // manual, *follow, error
-             // referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-             // body: {}, // body data type must match "Content-Type" header
             });
       });
 
