--- a/views/index.jade
+++ b/views/index.jade
@@ -10,8 +10,7 @@ block js
     $(document).ready(function () {
     
       $("#btnFetch").on('click',async function() {
-        // const response = await fetch('https://8f5b-2803-9800-909f-80fc-69f8-103c-d1d-9dd1.sa.ngrok.io/cookies', { //app2
-           const response = await fetch('https://5e66-181-117-166-245.sa.ngrok.io/cookies', { //app2
+           const response = await fetch('https://1349-2803-9800-909f-80fc-dcf9-acb5-6acb-3c25.sa.ngrok.io/cookies', { //app2
             method: 'POST',
             headers: {
               'Content-Type': 'application/json'
@@ -23,11 +22,10 @@ block js
       });
 
       $("#btnCreate").on('click',async function() {
-         const response = await fetch('https://5e4a-181-117-166-245.sa.ngrok.io/createCookie', { //app1
-              method: "GET", // *GET, POST, PUT, DELETE, etc.
+        const response = await fetch('https://8697-2803-9800-909f-80fc-dcf9-acb5-6acb-3c25.sa.ngrok.io/createCookie', { //app1
+              method: "GET",
             });
       });
-
 
     });
 
